user reinit
